Opened 11 years ago

Closed 10 years ago

#10852 closed bug (fixed)

MDR notification panel set to never don't seem to make a difference

Reported by: AlienSoldier Owned by: axeld
Priority: normal Milestone: R1/beta1
Component: Servers/mail_daemon Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

So far my fix is to set it to check at a ridiculously long interval of time. It was working fine in R5.

Change History (7)

comment:1 by diver, 11 years ago

Component: Applications/MailServers/mail_daemon

comment:2 by diver, 11 years ago

Owner: changed from czeidler to axeld
Status: newassigned

comment:3 by waddlesplash, 11 years ago

Milestone: R1R1/alpha5

comment:4 by jessicah, 10 years ago

Can you confirm that you're talking about the Show connection status window settings? And/or a screenshot of the actual window you're talking about, as there are a couple different windows/notifications that it could be related to.

comment:5 by AlienSoldier, 10 years ago

Yes, the "Show connection status window settings". Perhaps the setting is still hooked to the old non unified notifier that was MDR only before, i really don't know.

I notice that the "while sending" don't work either as it still mention pop3. Also i don't know what the "Always" is about . Perhaps a monitoring always on screen panel?, don't make much sense for email unless it stay on screen until acknowleged by a click. I can't test that one because the pop3 do not work anymore until axel upload his latest MDR .

It seem that the "never" for the "check every" field is working that said, so i guess i can use that instead of 500 days.

comment:6 by pulkomandy, 10 years ago

Milestone: R1/alpha5R1/beta1

comment:7 by pulkomandy, 10 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev48678.

Note: See TracTickets for help on using tickets.