src/servers/mail/MailDaemonApplication.h
@@ -111,7 +111,6 @@ private:
 
 			ErrorLogWindow*		fErrorLogWindow;
 			BNotification*		fNotification;
-			uint32				fNotifyMode;
 };
 
 
